--- a/style/styles.css
+++ b/style/styles.css
@@ -61,8 +61,7 @@ body {
     background-color: var(--dark-green-bg-color);
 }
 
-.header__btn-booking {
-    height: auto;
+.btn {
     background-color: var(--dark-green-bg-color);
     border: none;
     font-size: 1.5rem;
@@ -72,7 +71,7 @@ body {
     font-family: Arial, Helvetica, sans-serif
 }
 
-.header__btn-booking:hover {
+.btn:hover {
     background-color: var(--darkest-green-bg-color);
     cursor: pointer;
 }
@@ -81,3 +80,34 @@ body {
     width: 5%;
     background-color: black;
 } */
+
+/* HERO SECTION */
+.hero {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.hero__image-box {
+    flex: 7;
+}
+
+.hero__image {
+    width: 100%;
+}
+
+.hero__description {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
+
+p {
+    line-height: 1.3rem;
+}
+
+.btn--small {
+    display: inline;
+}
