--- a/style/styles.css
+++ b/style/styles.css
@@ -17,6 +17,8 @@
 
     /* FONTS */
     --primary-font: "Roboto";
+
+    --animation-timing: 200ms ease-in-out;
 }
 
 /* PAGE - LANDING */
@@ -31,6 +33,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 .logo {
@@ -79,11 +82,20 @@ body {
     color: white;
     padding: 1rem 1.5rem;
     border-radius: 10px;
+    text-decoration: none;
 }
 
 .btn:hover {
     background-color: var(--darkest-green-bg-color);
     cursor: pointer;
+}
+
+.header__hamburger-menu {
+    display: none;
+}
+
+.header__hamburger {
+    display: none;
 }
 
 /* HERO SECTION */
@@ -111,7 +123,7 @@ body {
 }
 
 .btn--small {
-    width: 59%;
+    width: max-content;
 }
 
 /* WRAPPER */
@@ -147,7 +159,7 @@ body {
 
 .booking__input-box {
     margin-top: .5rem;
-    max-width: 70%;
+    max-width: 76%;
     height: 2rem;
     padding-left: .5rem;
 }
@@ -158,6 +170,7 @@ body {
     width: 100%;
     margin-top: 3rem;
     display: flex;
+    flex-direction: row;
     gap: 2rem;
 }
 
@@ -251,7 +264,88 @@ body {
     border-radius: 10px;
 }
 
+/* MEDIA QUERIES */
+@media screen and (max-width: 880px) {
+    /* .header__links {
+        font-size: 1.2rem;
+    }
 
+    .header__nav-titles {
+        padding: 1rem .5rem;
+    }
+    */
+    
+    .btn {
+        font-size: 1rem;
+        
+    } 
+
+    .header {
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    .header button {
+        display: none;
+    }
+
+    .header__navigation {
+        display: none;
+    }
+
+    .header__hamburger-btn {
+        width: 3rem;
+        aspect-ratio: 1rem;
+        position: absolute;
+        background-color: red;
+        top: 3.5rem;
+        right: 1rem;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .header__hamburger-btn > span,
+    .header__hamburger-btn > span::before,
+    .header__hamburger-btn > span::after {
+        width: 100%;
+        height: 8px;
+        background-color: var(--darkest-green-bg-color);
+        position: absolute;
+        border-radius: 50px;
+        transition: all .3s ease-in-out;
+    }
+    
+    .header__hamburger-btn > span::before{
+        content: ""; /* TO MAKE THE TOP BORDER TO SHOW */
+        top: -12px; /* DEFAULT ITS IN THE MIDDLE SO IT HAS TO GO UP */
+    }
+    
+    .header__hamburger-btn > span::after {
+        content: ""; /* TO MAKE THE TOP BORDER TO SHOW */
+        top: 12px; /* DEFAULT ITS IN THE MIDDLE SO IT HAS TO GO DOWN */
+    }
+    
+    .header__hamburger-menu:checked ~ .header__hamburger-btn >span {
+        transform: rotate(45deg);
+    }
+    
+    .header__hamburger-menu:checked ~ .header__hamburger-btn >span::before {
+        transform: rotate(0);
+        top: 0;
+    }
+    .header__hamburger-menu:checked ~ .header__hamburger-btn >span::after {
+        transform: rotate(90deg);
+        top: 0;
+    }
+
+    .image-info__block {
+        flex-direction: column;
+    }
+
+    .image-info__block--wrap-reverse {
+        flex-direction: column-reverse;
+    }
+}
 
 
 
