--- a/style/styles.css
+++ b/style/styles.css
@@ -28,7 +28,7 @@ body {
 
 /* HEADER SECTION */
 .header {
-    padding: 1rem 1.5rem;
+    padding: 1.5rem 1.5rem;
     background-color: var(--light-green-bg-color);
     display: flex;
     align-items: center;
@@ -38,7 +38,7 @@ body {
 
 .logo {
     aspect-ratio: 1;
-    width: 80px;
+    width: 80px;    
 }
 
 .logo__favicon {
@@ -328,7 +328,30 @@ body {
     .header__hamburger-menu:checked ~ .header__hamburger-btn >span {
         transform: rotate(45deg);
     }
-    
+
+    .header__navigation {
+        display: block;
+        width: 100%;
+        height: 100vh;
+        }
+
+    .header__nav-list {
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-end;
+        padding-top: 5rem;
+    }
+
+    .header__nav-titles {
+        width: 100%;
+        border-top: 1px solid var(--darkest-green-bg-color);
+    }
+
+    .logo {
+        position: absolute;
+        top: 1rem;
+    }
+            
     .header__hamburger-menu:checked ~ .header__hamburger-btn >span::before {
         transform: rotate(0);
         top: 0;
