--- a/style/styles.css
+++ b/style/styles.css
@@ -37,6 +37,7 @@ body {
 }
 
 .logo {
+    z-index: 999;
     aspect-ratio: 1;
     width: 80px;    
 }
@@ -266,44 +267,47 @@ body {
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 880px) {
-    /* .header__links {
-        font-size: 1.2rem;
-    }
-
-    .header__nav-titles {
-        padding: 1rem .5rem;
-    }
-    */
-    
-    .btn {
+      .btn {
         font-size: 1rem;
-        
     } 
 
     .header {
-        justify-content: center;
-        gap: 2rem;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .header button {
         display: none;
     }
-
+    
     .header__navigation {
-        display: none;
-    }
-
-    .header__hamburger-btn {
-        width: 3rem;
-        aspect-ratio: 1rem;
-        position: absolute;
-        background-color: red;
-        top: 3.5rem;
-        right: 1rem;
-        display: flex;
-        justify-content: center;
+        width: 100%;
     }
     
+    .header__hamburger-btn {
+        z-index: 999;
+        width: 3rem;
+        position: absolute;
+        top: 3.5rem;
+        right: 1.5rem;
+    }
+
+    .header__nav-list {
+        width: 100%;
+        display: none;
+        flex-direction: column;
+    }
+
+    .header__nav-titles {
+        width: 100%;
+        transform: translateX(110%);
+        border-top: 1px solid var(--darkest-green-bg-color);
+    }
+
+    .header__nav-titles--border-bottom {
+        border-bottom: 1px solid var(--darkest-green-bg-color);
+    }
+  
     .header__hamburger-btn > span,
     .header__hamburger-btn > span::before,
     .header__hamburger-btn > span::after {
@@ -329,38 +333,47 @@ body {
         transform: rotate(45deg);
     }
 
-    .header__navigation {
-        display: block;
-        width: 100%;
-        height: 100vh;
-        }
-
-    .header__nav-list {
-        width: 100%;
-        flex-direction: column;
-        align-items: flex-end;
-        padding-top: 5rem;
-    }
-
-    .header__nav-titles {
-        width: 100%;
-        border-top: 1px solid var(--darkest-green-bg-color);
-    }
-
-    .logo {
-        position: absolute;
-        top: 1rem;
-    }
-            
     .header__hamburger-menu:checked ~ .header__hamburger-btn >span::before {
         transform: rotate(0);
         top: 0;
     }
+
     .header__hamburger-menu:checked ~ .header__hamburger-btn >span::after {
         transform: rotate(90deg);
         top: 0;
     }
 
+    .header__hamburger-menu:checked ~ .header__navigation {
+        margin: 1.5rem 0;
+    }
+
+    .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list {
+        display: block;
+    }
+
+    .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list > .header__nav-titles {
+        transform: translateX(0);
+        transition: transform 1s ease-in-out;
+        text-align: end;
+        justify-self: end;
+        /* background-color: red; */
+        width: 15rem;
+    }
+
+    .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list > .header__nav-titles > .header__links {
+        /* background-color: aqua; */
+        width: 100%;
+        display: block;
+        justify-self: end;
+    }
+
+    .header__hamburger-menu:checked ~ .btn {
+        display: block;
+        align-self: flex-end;
+        margin-bottom: 14rem;
+    }
+
+    /* MQ - PAGE - LANDING */
     .image-info__block {
         flex-direction: column;
     }
