--- a/style/styles.css
+++ b/style/styles.css
@@ -7,7 +7,7 @@
 
 /* COLORS */
 :root {
-    --light-green-bg-color: #C7C9A9;
+    --light-green-bg-color: #c7c9a9;
     --lightest-green-bg-color: #ECEED7;
     --dark-green-bg-color: #7E8341;
     --darkest-green-bg-color: #4D4729;
@@ -115,6 +115,10 @@ body {
     border-radius: 10px;
 }
 
+.hero__image--no-radius {
+    border-radius: 0px;
+}
+
 .hero__description {
     flex: 3;
     display: flex;
@@ -139,28 +143,31 @@ body {
 
 /* BOOKING FORM - LANDING */
 .booking {
-    width: 70%;
-    padding: 2rem 0;
+    padding: 2rem 2rem;
     background-color: var(--light-green-bg-color);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    /* text-align: center; */
+    text-align: center;
 }
 
 .booking__input-field {
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(80px, 140px));
-    justify-content: center;
-    row-gap: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
+.booking__input {
+    width: 115px;
 }
 
 .booking__input-box {
-    margin-top: .5rem;
-    max-width: 76%;
+    max-width: 100%;
     height: 2rem;
     padding-left: .5rem;
 }
@@ -266,43 +273,81 @@ body {
 }
 
 /* PAGE - BOOKING ROOM */
-.search {
-    background-color: red;
-}
-
 .wrapper--flex-row {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
     gap: 1rem;
 }
 
-.booking--wider {
-    width: 320px;
-    /* width: 100%; */
+.booking__input-field--wide {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.wrapper--flex-row {
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+.booking__input-field--padding {
+    padding: 0 1rem;
+}
+
+.booking__input--width {
+    flex: 1 1 15px;
+    max-width: 100%;
 }
 
 .room {
+    padding: 1.5rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .room__card {
+    width: 100%;
     display: flex;
     flex-direction: row;
+    gap: 1rem;
 }
+.room__gallery {
+    flex: 5;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: .5rem;
+}
+
 .room__image {
-    flex: 2;
     width: 100%;
 }
 
-.room__info {
-    flex: 7;
+.room__image--large {
+    grid-column: auto / span 3;    
 }
 
+.room__info {
+    flex: 5;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #fdfdfd;
+    gap: 1rem;
+}
+
+.room__list {
+    list-style-position: inside;
+    display: flex;
+    gap: 2rem;
+}
+
+.room__btn {
+    align-self: end;
+    display: flex;
+    gap: 1rem;
+}
+
+.price {
+    text-align: end;
+}
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 880px) {
@@ -416,7 +461,7 @@ body {
         margin-bottom: 14rem;
     }
 
-    /* MQ - PAGE - LANDING */
+    /* MQ PAGE - LANDING */
     .image-info__block {
         flex-direction: column;
     }
@@ -424,8 +469,14 @@ body {
     .image-info__block--wrap-reverse {
         flex-direction: column-reverse;
     }
+
+    /* MQ PAGE - BOOKING ROOM */
+    .room__card {
+        flex-direction: column;
+    }
+
+    .room__gallery {
+        flex: none; /* INACTIVE THE FLEX RULE */
+        width: 100%;
+    }
 }
-
-
-
-
