--- a/style/styles.css
+++ b/style/styles.css
@@ -28,18 +28,22 @@ body {
 
 /* HEADER SECTION - LANDING */
 .header {
+    height: 133px;
     padding: 1.5rem 1.5rem;
     background-color: var(--light-green-bg-color);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     position: relative;
 }
 
 .logo {
-    z-index: 999;
+    z-index: 998;
     aspect-ratio: 1;
-    width: 80px;    
+    width: 80px;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;    
 }
 
 .logo__favicon {
@@ -101,13 +105,13 @@ body {
 
 /* HERO SECTION - LANDING */
 .hero {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
 }
 
 .hero__image-box {
-    flex: 7;
+    grid-column: auto / span 3;
 }
 
 .hero__image {
@@ -120,7 +124,7 @@ body {
 }
 
 .hero__description {
-    flex: 3;
+    grid-column: auto / span 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -155,31 +159,37 @@ body {
 
 .booking__input-field {
     width: 100%;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    /* flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center; */
+    grid-template-columns: repeat(4, 1fr);
     row-gap: 1rem;
     column-gap: 1rem;
 }
 
 .booking__input {
-    width: 115px;
+    width: 100%;
+    grid-column: auto / span 1;
 }
 
 .booking__input-box {
-    max-width: 100%;
+    width: 100%;
     height: 2rem;
     padding-left: .5rem;
 }
 
 /* IMAGE INFO SECTION - LANDING*/
-
 .image-info__block {
     width: 100%;
+    padding: 2rem;
     margin-top: 3rem;
     display: flex;
     flex-direction: row;
     gap: 2rem;
+    background-color: rgb(255, 252, 252);
+    border-radius: 10px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5);
 }
 
 .image-info__text {
@@ -208,11 +218,8 @@ body {
     row-gap: 1rem;
 }
 
-.logo--larger {
-    min-width: 35%;
-}
-
-.logo--center {
+.footer__logo {
+    width: 150px;
     align-self: center;
     justify-self: center;
 }
@@ -291,15 +298,21 @@ body {
     max-width: 100%;
 }
 
-.room {
-    padding: 1.5rem;
-    width: 100%;
+.overview-room {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
-    background-color: white;
+    gap: 2rem;
+    background-color: rgb(255, 255, 255);
+    padding: 2rem;
     border-radius: 10px;
+}
+
+.room {
+    padding: 1.5rem;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .5);
 }
 
 .room__card {
@@ -309,10 +322,10 @@ body {
     gap: 1rem;
 }
 .room__gallery {
-    flex: 5;
+    flex: 4;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-direction: column;
     gap: .5rem;
 }
 
@@ -320,9 +333,20 @@ body {
     width: 100%;
 }
 
-.room__image--large {
-    grid-column: auto / span 3;    
+.room__image-small {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: .5rem;
 }
+
+.room__image-small-box {
+    width: 100%;
+}
+
+/* .room__image--large {
+    grid-column: auto / span 3;    
+} */
 
 .room__info {
     flex: 5;
@@ -359,10 +383,6 @@ body {
         flex-direction: column;
         align-items: flex-start;
     }
-
-    /* .header button {
-        display: none;
-    } */
 
     .header > .btn {
         display: none;
@@ -444,12 +464,10 @@ body {
         transition: transform 1s ease-in-out;
         text-align: end;
         justify-self: end;
-        /* background-color: red; */
         width: 15rem;
     }
 
     .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list > .header__nav-titles > .header__links {
-        /* background-color: aqua; */
         width: 100%;
         display: block;
         justify-self: end;
@@ -462,6 +480,20 @@ body {
     }
 
     /* MQ PAGE - LANDING */
+    .hero__image-box,
+    .hero__description {
+        grid-column: auto / span 4;
+    }
+
+    .hero__description {
+        flex-direction: column;
+        justify-self: center;
+    }
+
+    .booking__input {
+        grid-column: auto / span 2;
+    }
+
     .image-info__block {
         flex-direction: column;
     }
