--- a/style/styles1.css
+++ b/style/styles1.css
@@ -28,6 +28,7 @@ body {
 
 /* HEADER SECTION - LANDING */
 .header {
+    /* height: 133px; */
     padding: 1.5rem 1.5rem;
     background-color: var(--light-green-bg-color);
     display: flex;
@@ -39,7 +40,7 @@ body {
 .logo {
     z-index: 998;
     aspect-ratio: 1;
-    width: 80px;
+    width: 80px;  
 }
 
 .logo__favicon {
@@ -64,9 +65,9 @@ body {
     background-color: var(--dark-green-bg-color);
 }
 
-.header__nav-titles:last-child:hover {
+/* .header__nav-titles:last-child:hover {
     background-color: transparent;
-}
+} */
 
 .header__links {
     text-decoration: none;
@@ -160,6 +161,9 @@ body {
 .booking__input-field {
     width: 100%;
     display: grid;
+    /* flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center; */
     grid-template-columns: repeat(4, 1fr);
     row-gap: 1rem;
     column-gap: 1rem;
@@ -277,8 +281,22 @@ body {
 }
 
 /* PAGE - BOOKING ROOM */
-.wrapper--gap {
-    gap: 2rem;
+.wrapper--flex-row {
+    gap: 1rem;
+}
+
+.booking__input-field--wide {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.booking__input-field--padding {
+    padding: 0 1rem;
+}
+
+.booking__input--width {
+    flex: 1 1 15px;
+    max-width: 100%;
 }
 
 .overview-room {
@@ -327,6 +345,10 @@ body {
     width: 100%;
 }
 
+/* .room__image--large {
+    grid-column: auto / span 3;    
+} */
+
 .room__info {
     flex: 5;
     width: 100%;
@@ -340,8 +362,6 @@ body {
     list-style-position: inside;
     display: flex;
     gap: 2rem;
-    text-indent: -1.4rem;
-    padding-left: 1.6rem;
 }
 
 .room__btn {
@@ -457,6 +477,7 @@ body {
     .header__hamburger-menu:checked ~ .btn {
         display: block;
         align-self: flex-end;
+        /* margin-bottom: 14rem; */
     }
 
     /* MQ PAGE - LANDING */
@@ -468,8 +489,6 @@ body {
     .hero__description {
         flex-direction: column;
         justify-self: center;
-        align-items: center;
-        text-align: center;
     }
 
     .booking__input {
@@ -484,7 +503,7 @@ body {
         flex-direction: column-reverse;
     }
 
-    /* MQ PAGE - BOOKING ROOM */    
+    /* MQ PAGE - BOOKING ROOM */
     .room__card {
         flex-direction: column;
     }
