--- a/style/styles.css
+++ b/style/styles.css
@@ -21,12 +21,12 @@
     --animation-timing: 200ms ease-in-out;
 }
 
-/* PAGE - LANDING */
+/* BODY - LANDING PAGE*/
 body {
     background-color: var(--lightest-green-bg-color);
 }
 
-/* HEADER SECTION - LANDING */
+/* HEADER SECTION - LANDING PAGE*/
 .header {
     padding: 1.5rem 1.5rem;
     background-color: var(--light-green-bg-color);
@@ -103,7 +103,7 @@ body {
     display: none;
 }
 
-/* HERO SECTION - LANDING */
+/* HERO SECTION - LANDING PAGE*/
 .hero {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -135,9 +135,9 @@ body {
     width: max-content;
 }
 
-/* WRAPPER - LANDING*/
+/* WRAPPER - LANDING PAGE*/
 .wrapper {
-    max-width: 1250px;
+    max-width: 1100px;
     margin: 0 auto;
     padding: 2rem;
     display: flex;
@@ -145,7 +145,7 @@ body {
     align-items: center;
 }
 
-/* BOOKING FORM - LANDING */
+/* BOOKING FORM - LANDING PAGE */
 .booking {
     padding: 2rem 2rem;
     background-color: var(--light-green-bg-color);
@@ -160,12 +160,15 @@ body {
 .booking__input-field {
     width: 100%;
     display: grid;
+}
+
+.grid-wrapping {
     grid-template-columns: repeat(4, 1fr);
     row-gap: 1rem;
     column-gap: 1rem;
 }
 
-.booking__input {
+.grid-wrapping__span-one {
     width: 100%;
     grid-column: auto / span 1;
 }
@@ -174,9 +177,11 @@ body {
     width: 100%;
     height: 2rem;
     padding-left: .5rem;
+    margin-top: .5rem;
+    border: none;
 }
 
-/* IMAGE INFO SECTION - LANDING*/
+/* IMAGE INFO SECTION - LANDING PAGE */
 .image-info__block {
     width: 100%;
     padding: 2rem;
@@ -206,12 +211,12 @@ body {
     border-radius: 10px;
 }
 
-/* FOOTER - ALL */
+/* FOOTER - ALL PAGES */
 .footer {    
     padding: 2rem;
     background-color: var(--light-green-bg-color);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     row-gap: 1rem;
 }
 
@@ -219,6 +224,38 @@ body {
     width: 150px;
     align-self: center;
     justify-self: center;
+}
+
+.footer__media-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+}
+
+.footer_link-box {
+    display: flex;
+    flex-direction: row;
+    gap: .5rem;
+}
+
+.footer__links {
+    width: 40px;
+    aspect-ratio: 1;
+}
+
+.footer__link-image {
+    width: 100%;
+}
+
+.footer__links:hover {
+    background-color: red;
+    cursor: pointer;
+}
+.footer__link-image:hover {
+    background-color: red;
+    cursor: pointer;
 }
 
 .footer__text {
@@ -239,14 +276,16 @@ body {
 .footer__icon {
     width: 12%;
     aspect-ratio: 1;
-
 }
 
 .footer__map {
     justify-self: center;
+    aspect-ratio: 1;
+    width: 250px;
+    border: none;
 }
 
-/* PAGE - ABOUT BONZAI */
+/* PAGE - ABOUT BONZAI PAGE */
 .content {
     display: flex;
     flex-direction: column;
@@ -276,7 +315,7 @@ body {
     border-radius: 10px;
 }
 
-/* PAGE - BOOKING ROOM */
+/* WRAPPER - BOOKING ROOM PAGE */
 .wrapper--gap {
     gap: 2rem;
 }
@@ -291,6 +330,7 @@ body {
     border-radius: 10px;
 }
 
+/* OVERVIEW ROOM - BOOKING ROOM PAGE */
 .room {
     padding: 1.5rem;
     width: 100%;
@@ -304,6 +344,7 @@ body {
     flex-direction: row;
     gap: 1rem;
 }
+
 .room__gallery {
     flex: 4;
     width: 100%;
@@ -336,10 +377,28 @@ body {
     gap: 1rem;
 }
 
+.room__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.room__review {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: .5rem;
+}
+
+.room__icon {
+    width: 35px;
+}
+
 .room__list {
     list-style-position: inside;
     display: flex;
-    gap: 2rem;
+    flex-direction: row;
+    gap: 3rem;
     text-indent: -1.4rem;
     padding-left: 1.6rem;
 }
@@ -350,13 +409,19 @@ body {
     gap: 1rem;
 }
 
+.room__book-btn:hover {
+    transform: scale(105%);
+    transition: transform .3s ease-in-out;
+}
+
 .price {
     text-align: end;
 }
 
-/* MEDIA QUERIES */
+/* MEDIA QUERIES - MAX WIDTH 990PX */
 @media screen and (max-width: 990px) {
-      .btn {
+    /*  MQ 990PX - ALL PAGES */
+    .btn {
         font-size: 1rem;
     } 
 
@@ -433,7 +498,7 @@ body {
     }
 
     .header__hamburger-menu:checked ~ .header__navigation {
-        margin: 1.5rem 0;
+        margin: 1.5rem 0 8rem 0;
     }
 
     .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list {
@@ -445,21 +510,20 @@ body {
         transition: transform 1s ease-in-out;
         text-align: end;
         justify-self: end;
-        width: 15rem;
+        width: 100%;
     }
 
     .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list > .header__nav-titles > .header__links {
         width: 100%;
         display: block;
-        justify-self: end;
     }
 
     .header__hamburger-menu:checked ~ .btn {
         display: block;
         align-self: flex-end;
-    }
+    }  
 
-    /* MQ PAGE - LANDING */
+    /* MQ 990PX - LANDING PAGE*/
     .hero__image-box,
     .hero__description {
         grid-column: auto / span 4;
@@ -476,6 +540,10 @@ body {
         grid-column: auto / span 2;
     }
 
+    .grid-wrapping__span-two {
+        grid-column: auto / span 2;
+    }
+
     .image-info__block {
         flex-direction: column;
     }
@@ -484,7 +552,7 @@ body {
         flex-direction: column-reverse;
     }
 
-    /* MQ PAGE - BOOKING ROOM */    
+    /* MQ 990PX - BOOKING ROOM PAGE */    
     .room__card {
         flex-direction: column;
     }
@@ -492,5 +560,13 @@ body {
     .room__gallery {
         flex: none; /* INACTIVE THE FLEX RULE */
         width: 100%;
+    }
+}
+
+/* MEDIA QUERIES - MAX WIDTH 550PX */
+@media screen and (max-width: 550px) {
+    /* MQ 550PX - FOOTER */
+    .grid-wrapping__span-full {
+        grid-column: auto / span 4;
     }
 }
