--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* DEFAULT SETTINGS */
@@ -8,7 +6,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 
 /* COLORS */
 :root {
@@ -22,12 +19,9 @@
 
     /* FONTS */
     --primary-font: "Montserrat", sans-serif;
-
-
-
-    --animation-timing: 200ms ease-in-out;
 }
 
+/* GENERIC UTILITIES */
 h1,h2, h3, p {
     color: var(--primary-text-color);
 }
@@ -58,6 +52,7 @@ body {
 }
 
 .header__nav-list {
+
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -65,7 +60,6 @@ body {
 }
 
 .header__nav-titles {
-    /* padding: 1rem; */
     font-size: 1.5rem;
     color: var(--secondary-text-color);
     cursor: pointer;
@@ -89,6 +83,10 @@ body {
 
 .header__links:hover {
     color: var(--secondary-text-color);
+}
+
+.header__links--no-hover:hover {
+    color: var(--primary-text-color);
 }
 
 .header__links--active {
@@ -149,8 +147,17 @@ body {
     gap: 1rem;
 }
 
+.hero__title {
+    font-size: 2rem;
+}
+
+.hero__text {
+    font-size: 1rem;
+}
+
 .btn--small {
-    width: max-content;
+    align-self: flex-start;
+    font-size: 1rem;
 }
 
 /* WRAPPER - LANDING PAGE*/
@@ -161,6 +168,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2rem;
 }
 
 /* BOOKING FORM - LANDING PAGE */
@@ -200,16 +208,26 @@ body {
 }
 
 /* IMAGE INFO SECTION - LANDING PAGE */
+.image-info {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
 .image-info__block {
     width: 100%;
     padding: 2rem;
-    margin-top: 3rem;
     display: flex;
     flex-direction: row;
     gap: 2rem;
     background-color: rgb(255, 252, 252);
     border-radius: 10px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5);
+}
+
+.image-info__block--column {
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .image-info__text {
@@ -308,7 +326,7 @@ body {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     gap: 1rem;
 }
 
@@ -328,6 +346,51 @@ body {
     border-radius: 10px;
 }
 
+/* DIN AI PAGE */
+.slider {
+    position: relative;
+} 
+
+.slider__frame {
+    display: flex;
+    flex-direction: row;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto; /* CLIP THE CONTENT TO THE CONTAINER */
+    scroll-snap-type: x mandatory; /* MAKE THE SNAPPING TO THE X LINE AND TO ALWAYS TO THE NEXT SNAP POSITION */
+    scroll-behavior: smooth; /* MAKES THE ANIMATION SMOOTH */
+    box-shadow: 0 15px 20px -12px rgba(0, 0, 0, .25);
+    overflow-x: hidden; /* HIDE THE HORIZONTAL SCROLLBAR */
+}
+
+.slider__img {
+    scroll-snap-align: start; /* THE IMAGE WILL SNAP/STOP AT THE START OF THE NEXT IMAGE ELEMENT */
+    object-fit: cover; /* IMAGE WILL FILL THE HEIGHT/WIDTH OF THE PARENT CONTAINER */
+}
+
+.slider__navigation {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    column-gap: 1.5rem;
+    bottom: 1.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.slider__nav-links {
+    width: .7rem;
+    height: .7rem;
+    margin: 0.2rem;
+    border-radius: 50%;
+    background-color:white;
+    opacity: .75;
+    transition: opacity ease 250ms;
+}
+
+.slider__nav-links:hover {
+    opacity: 1;
+}
+
 /* HEADER - BOOOKING ROOM PAGE */
 .header--grid {
     display:grid;
@@ -337,8 +400,6 @@ body {
 .header__navigation--center {
     justify-self: center;
 }
-
-
 
 /* WRAPPER - BOOKING ROOM PAGE */
 .wrapper--gap {
@@ -446,10 +507,6 @@ body {
     text-align: end;
 }
 
-.room__list-item {
-    /* vertical-align: middle; */
-}
-
 /* MEDIA QUERIES - MAX WIDTH 990PX */
 @media screen and (max-width: 990px) {
     /*  MQ 990PX - ALL PAGES */
@@ -466,11 +523,7 @@ body {
     .header > .btn {
         display: none;
     }
-/*     
-    .header__navigation {
-        width: 100%;
-    } */
-    
+
     .header__hamburger-btn {
         z-index: 999;
         width: 3rem;
@@ -480,24 +533,21 @@ body {
     }
 
     .header__navigation {
+        display: none;
         width: 100%;
         position: absolute;
         left: 0;
         top: 100%;
         text-align: right;
         background-color: var(--light-green-bg-color);
-        transform: translateX(110%);
-        transition: all .3s ease-in-out;
     }
 
-    .header__nav-list {
-        
+    .header__nav-list {   
         flex-direction: column;
     }
 
     .header__nav-titles {
         width: 100%;
-        /* transform: translateX(110%); */
         border-top: 1px solid var(--darkest-green-bg-color);
     }
 
@@ -541,9 +591,11 @@ body {
     }
 
     .header__hamburger-menu:checked ~ .header__navigation {
+        display: block;
         margin: 0 0 8rem 0;
         transform: translateX(0);
         height: 100vh;
+        z-index: 999;
     }
 
     .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list {
@@ -571,6 +623,7 @@ body {
     .header__hamburger-menu:checked ~ .header__navigation > .header__nav-list > .header__nav-titles--more-margin {
             padding: 1.5rem 1rem;
     }
+
     /* MQ 990PX - LANDING PAGE*/
     .hero__image-box,
     .hero__description {
@@ -578,10 +631,11 @@ body {
     }
 
     .hero__description {
-        flex-direction: column;
-        justify-self: center;
-        align-items: center;
         text-align: center;
+    }
+
+    .btn--center {
+        align-self: center;
     }
 
     .booking__input {
@@ -599,6 +653,7 @@ body {
     .image-info__block--wrap-reverse {
         flex-direction: column-reverse;
     }
+    /* MQ 990PX - ABOUT BONZAI PAGE */
 
     /* MQ 990PX - BOOKING ROOM PAGE */    
     .room__card {
@@ -616,5 +671,9 @@ body {
     /* MQ 550PX - FOOTER */
     .grid-wrapping__span-full {
         grid-column: auto / span 4;
+    }
+
+    .slider__navigation {
+        bottom: .5rem;
     }
 }
